// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notebook component > handles note creation 1`] = `
<div>
  <div>
    <h1>
      Bloco de notas
    </h1>
    <div
      class="_listGrid_f34e7c"
    >
      <div
        class="_card_277467"
      >
        <h3>
          Lembrete
        </h3>
        <p>
          Colocar presença na aula.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          React
        </h3>
        <p>
          Uma das bibliotecas mais utilizadas da atualidade.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          CESAR
        </h3>
        <p>
          Centro de Estudos e Sistemas Avançados do Recife.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          new note title
        </h3>
        <p>
          new description
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <button>
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Notebook component > handles note editing 1`] = `
<div>
  <div>
    <h1>
      Bloco de notas
    </h1>
    <div
      class="_listGrid_f34e7c"
    >
      <div
        class="_card_277467"
      >
        <h3>
          edited note title
        </h3>
        <p>
          edited description
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          React
        </h3>
        <p>
          Uma das bibliotecas mais utilizadas da atualidade.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          CESAR
        </h3>
        <p>
          Centro de Estudos e Sistemas Avançados do Recife.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          new note title
        </h3>
        <p>
          new description
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <button>
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`Notebook component > renders error state 1`] = `
<div>
  <h1>
    Que pena, algo de errado aconteceu :(
  </h1>
</div>
`;

exports[`Notebook component > renders loading state 1`] = `
<div>
  <h1>
    Carregando...
  </h1>
</div>
`;

exports[`Notebook component > renders notes correctly 1`] = `
<div>
  <div>
    <h1>
      Bloco de notas
    </h1>
    <div
      class="_listGrid_f34e7c"
    >
      <div
        class="_card_277467"
      >
        <h3>
          Lembrete
        </h3>
        <p>
          Colocar presença na aula.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          React
        </h3>
        <p>
          Uma das bibliotecas mais utilizadas da atualidade.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <div
        class="_card_277467"
      >
        <h3>
          CESAR
        </h3>
        <p>
          Centro de Estudos e Sistemas Avançados do Recife.
        </p>
        <div
          class="_cardFooter_277467"
        >
          <button>
            Editar
          </button>
          <button>
            Remover
          </button>
        </div>
      </div>
      <button>
        +
      </button>
    </div>
  </div>
</div>
`;
